
ChangeLog
 [ + added, - removed, * changed ]
 * 27Mar2019 Breaks infinite loop in signal handler (closes #19)
 * 26Mar2019 Installs Python modules only if their support is enabled by `configure`
 * 26Mar2019 Fixes bug in configure mis-detecting libiberty even if it is not available (closes #7)
 - 26Mar2019 Reverts partial support for nested OpenMP in Intel KMPC runtime
 + 26Mar2019 Adds instrumentation support for Mprobe, Improbe, Mrecv, Imrecv 
 * 26Mar2019 Reverts commit 1a215e849f to stop using dladdr to translate UF from dynamic libraries
 * 25Mar2019 Fixes missing worksharings in GNU and Intel OpenMP
 + 25Mar2019 Adds pyextrae.pthreads module
 * 25Mar2019 Fixes timestamp of rusage and memusage events
 + 25Mar2019 Adds functions in pyextrae to toggle the profiler on/off 
 * 25Mar2019 Fixes compatibility issue with cudaStreamLegacy available since CUDA 7
 * 25Mar2019 Fixes bug in initialization of OmpSs tracing (only master thread was detected)
 * 24Jan2019 Always use POSIX clock except if it is disabled setting the EXTRAE_USE_POSIX_CLOCK environment variable to 0
 * 19Sep2018 Fixes bug in variable declaration in 'free' wrapper
 * 18Sep2018 Fixes bug in OpenMP common wrapper hook points
 * 18Sep2018 Removes debug for OpenMP Fortran wrappers
 * 17Sep2018 Fixes race condition when issuing install in a parallel make (closes #18)
 * 17Sep2018 Fixes memory corruption when reading CPU frequency (closes #17)
 * 17Sep2018 Translates UF symbol addresses to find symbols in dynamic libraries
 * 17Sep2018 Increases maximum number of threads for IBM XL OMP runtime helpers to 256 and removes checks when the IBM runtime is not hooked
 * 17Sep2018 Adds wrapper for taskgroup construct in Intel runtime
 * 17Sep2018 Fixes dlsym loop when trying to obtain the pointer to calloc
 * 17Sep2018 Solves infinite loop when getting the real pointer for 'free'
 * 09Jul2018 Fixes compatibility of pyextrae with Python 3