@@ -321,7 +321,7 @@ int MPI_Win_flush_C_Wrapper (int rank, MPI_Win win)
 	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_EV, EVT_BEGIN, rank, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 	ierror = PMPI_Win_flush (rank, win);
-	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_EV, EVT_BEGIN, EMPTY, EMPTY,
+	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_EV, EVT_END, EMPTY, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 
 	updateStats_OTHER(global_mpi_stats);
@@ -336,7 +336,7 @@ int MPI_Win_flush_all_C_Wrapper (MPI_Win win)
 	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_ALL_EV, EVT_BEGIN, EMPTY, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 	ierror = PMPI_Win_flush_all (win);
-	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_ALL_EV, EVT_BEGIN, EMPTY, EMPTY,
+	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_ALL_EV, EVT_END, EMPTY, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 
 	updateStats_OTHER(global_mpi_stats);
@@ -351,7 +351,7 @@ int MPI_Win_flush_local_C_Wrapper (int rank, MPI_Win win)
 	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_LOCAL_EV, EVT_BEGIN, rank, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 	ierror = PMPI_Win_flush_local (rank, win);
-	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_LOCAL_EV, EVT_BEGIN, EMPTY, EMPTY,
+	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_LOCAL_EV, EVT_END, EMPTY, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 
 	updateStats_OTHER(global_mpi_stats);
@@ -366,7 +366,7 @@ int MPI_Win_flush_local_all_C_Wrapper (MPI_Win win)
 	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_LOCAL_ALL_EV, EVT_BEGIN, EMPTY, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 	ierror = PMPI_Win_flush_local_all (win);
-	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_LOCAL_ALL_EV, EVT_BEGIN, EMPTY, EMPTY,
+	TRACE_MPIEVENT (LAST_READ_TIME, MPI_WIN_FLUSH_LOCAL_ALL_EV, EVT_END, EMPTY, EMPTY,
 	  EMPTY, EMPTY, EMPTY);
 
 	updateStats_OTHER(global_mpi_stats);
