@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 27Mar2019 Fixes incorrect states for MPI_Win_flush_* calls
  * 27Mar2019 Breaks infinite loop in signal handler (closes #19)
  * 26Mar2019 Installs Python modules only if their support is enabled by `configure`
  * 26Mar2019 Fixes bug in configure mis-detecting libiberty even if it is not available (closes #7)
